--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vienvenidos a la web de mi empresa</title>
+    <title>Vienvenidos a la web de mi empresa, vuelve pronto</title>
   </head>
-  <body></body>
+  <body>
+    <p>Estamos en construccion</p>
+  </body>
 </html>
