Elimino el texto de la pagina

--- a/Index.html
+++ b/Index.html
@@ -6,10 +6,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vienvenidos a la web de mi empresa vuelve pronto</title>
   </head>
-  <body>
-    <p>Estamos en construccion</p>
-    <p>Esto son otras coas que pongo aquie</p>
-
-    <p>Esto Esto son otrase</p>
-  </body>
+  <body></body>
 </html>
