Retoca el estilo de la pagina

--- a/Index.html
+++ b/Index.html
@@ -12,6 +12,6 @@
 
     <p>Esto Esto son otrase</p>
     <p>Ahora meto esto</p>
-    <p>Nuevo movida para la feature</p>
+    <p><b>Nuevo movida para la feature</b></p>
   </body>
 </html>
